[gd_scene load_steps=26 format=2]

[ext_resource path="res://PlayerAnims.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Projectiles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Parry.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/Parry.png" type="Texture" id=5]
[ext_resource path="res://Shield.gd" type="Script" id=6]
[ext_resource path="res://Parry.tres" type="Animation" id=7]
[ext_resource path="res://Blink.tres" type="Animation" id=8]
[ext_resource path="res://EndSlam.tres" type="Animation" id=9]
[ext_resource path="res://StartSlam.tres" type="Animation" id=10]
[ext_resource path="res://SlamWidth.tscn" type="PackedScene" id=11]
[ext_resource path="res://Rock.tscn" type="PackedScene" id=12]
[ext_resource path="res://player/NoParry.png" type="Texture" id=14]
[ext_resource path="res://SFX Bolt Release.mp3" type="AudioStream" id=15]
[ext_resource path="res://Retro-Swooosh-02.mp3" type="AudioStream" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 33.5 )

[sub_resource type="CapsuleShape2D" id=2]
height = 78.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Shield:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield/Shield2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shield:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shield:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 30 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:Is_Slam")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:acceleration")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:SlamPower")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1000 ]
}

[sub_resource type="Animation" id=6]
resource_name = "JumpWasPressed"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:JumpWasPressed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:JumpWasPressed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "State_0"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 100 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:JumpPower")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -500, -500 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Unfreeze"
length = 1.3
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Unfreeze"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:UnFrozen")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 11.5, 38 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 2 )
Projectile = ExtResource( 3 )
PARRY = ExtResource( 4 )
Slam = ExtResource( 11 )
Rocks = ExtResource( 12 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "Knocked_Frozen"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 14.5 )
shape = SubResource( 1 )

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="Shooter" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 256

[node name="NoShield" type="Sprite" parent="."]
visible = false
position = Vector2( -36, -33 )
scale = Vector2( 0.35, 0.3 )
texture = ExtResource( 14 )

[node name="Shield" type="Sprite" parent="."]
visible = false
position = Vector2( 40, 0 )
rotation = 3.14159
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
flip_v = true

[node name="Shield2" type="Area2D" parent="Shield"]
collision_layer = 0
collision_mask = 64
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield/Shield2"]
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Parry = ExtResource( 7 )
anims/RESET = SubResource( 3 )

[node name="Blink" type="AnimationPlayer" parent="."]
anims/Blink = ExtResource( 8 )
anims/RESET = SubResource( 5 )

[node name="Slam" type="AnimationPlayer" parent="."]
anims/EndSlam = ExtResource( 9 )
anims/RESET = SubResource( 4 )
anims/StartSlam = ExtResource( 10 )

[node name="AllowingToJump" type="AnimationPlayer" parent="."]
anims/JumpWasPressed = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/State_0 = SubResource( 9 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/Unfreeze = SubResource( 10 )

[node name="LadderChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderChecker"]
position = Vector2( 1.5, 14 )
shape = SubResource( 8 )

[node name="SpikeDetecter" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true
cast_to = Vector2( 0, 82 )
collision_mask = 16

[node name="FloorDetecter" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true
collision_mask = 2

[node name="FloorDetecter2" type="RayCast2D" parent="."]
position = Vector2( 0, 20 )
enabled = true
collision_mask = 2

[node name="Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -20.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[connection signal="Frozen" from="Shield/Shield2" to="." method="_on_Shield2_Frozen"]
[connection signal="area_entered" from="Shield/Shield2" to="." method="_on_Shield2_area_entered"]
[connection signal="body_entered" from="LadderChecker" to="." method="_on_LadderChecker_body_entered"]
[connection signal="body_exited" from="LadderChecker" to="." method="_on_LadderChecker_body_exited"]
